--- a/public/includes/header.html
+++ b/public/includes/header.html
@@ -1,6 +1,6 @@
-<header id="region_header_ua" class="def-header">
-    <section class="container l-container">
-        <div class="def-header">
+<header class="head">
+    <section>
+        <div class="head">
             <a href="http://www.arizona.edu" title="The University of Arizona homepage" class="arizona-logo">
                 <img alt="The University of Arizona Wordmark Line Logo White"
                     src="https://cdn.uadigital.arizona.edu/logos/v1.0.0/ua_wordmark_line_logo_white_rgb.min.svg"
