--- a/public/includes/header.html
+++ b/public/includes/header.html
@@ -1,10 +1,14 @@
 <header class="headerman">
-    <div class="headerman">
-            <img alt="exploreAz Logo"
-                src="images/logo.png"
-                class="logo">
-    </div>
+
+    <video autoPlay loop muted id="video">
+        <source src="images/az.mp4" type="video/mp4">
+    </video>
+    <img alt="exploreAz Logo"
+        src="images/logo.png"
+        class="logo">
+    
 </header>
+
 <!-- This is the space for IT to add a litte submenu to send them to support.engr -->
 <!--<div id="region-header-engr" class="support">
     <button id="support-menu-button" onclick="support_menu_toggle('support-menu');">
