--- a/public/includes/footer.html
+++ b/public/includes/footer.html
@@ -5,11 +5,11 @@
                 <div class="text-center" id="footer-copyright">
                     <!-- put your adress information here -->
                     Created by Students of The University of Arizona | Tucson, AZ USA 85721 <br>
-                    Email:&nbsp;<a href="mailto:support@engr.arizona.edu">support@engr.arizona.edu
+                    Email:&nbsp;<a href="mailto:exploreAZ@gmail.com">exploreAZ@gmail.com
                         <br></a>
                     <!-- end o addr -->
                     <!-- your feedback link or mailto -->
-                    <a href="mailto:support@engr.arizona.edu">Feedback</a>
+                    <a href="mailto:exploreAZ@gmail.com">Feedback</a>
                 </div>
             </div>
         </div>
