--- a/public/css/stylesheet_activ.css
+++ b/public/css/stylesheet_activ.css
@@ -7,12 +7,13 @@
 .activity img {
 	display: center;
 	margin-bottom: 10px;
+	border: solid black 10px;
 	
 }
 
 .activity p {
     text-align: center;
-	max-width: 550px;
+	max-width: 1000px;
 	margin: 0 auto;
 
 }
