--- a/public/css/azStyle.css
+++ b/public/css/azStyle.css
@@ -20,6 +20,8 @@ h1{
   margin-bottom: 20px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   text-transform: uppercase;
+  border-bottom: 6px solid var(--AZCopper);
+  padding-bottom: 20px;
 }
 
 
@@ -55,6 +57,13 @@ video {
   padding: 15px;
 }
 
+.park-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: solid var(--AZBlue) 10px;
+}
+
 .sh3{
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
@@ -62,8 +71,8 @@ video {
 }
 
 .listImages{
-   width: 600px;
-   height: 400px;
+   max-height: 400px;
+   border: solid var(--AZBlue) 10px;
 }
 
 .listDiv{
@@ -99,6 +108,72 @@ th, td {
    font-family: Arial, Helvetica, sans-serif;
    padding: 10px;
    text-align: center;
+}
+
+section {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content:center;
+	overflow: hidden;
+}
+
+.h1-divider {
+	background-color: #252525;
+	margin-bottom: 37px;
+}
+
+article h2 {
+  font-family: 'Alfa Slab One', cursive;
+  font-style: italic;
+font-weight: 800;
+margin-left: auto;
+line-height: 40px;
+}
+
+article h3 {
+	font-weight: 800;
+	margin: 0;
+	line-height: 27px;
+}
+
+section p {
+	font-family: 'Open Sans', sans-serif;
+	color: #252525;
+	line-height: 25px;
+	margin-bottom: 40px;
+	text-align: justify;
+}
+
+section .intro {
+	font-weight: 300;
+}
+article p {
+	margin-top: 0;
+	margin-bottom: 10px;
+}
+article h3,
+section p {
+	font-size: 16px;
+}
+
+.restaurant_img {
+  width: 500px; 
+  height: 500; 
+  
+  margin: 10px; 
+  padding: 5px; 
+  
+  border: 0.5px solid #ccc; 
+  
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1); 
+
+  border-radius: 5px; 
+  transition: transform 0.3s ease-in-out; 
+
+  display: block; 
+  margin-left: auto; 
+  margin-right: auto;
+  margin-bottom: 40px;
 }
 
 
@@ -160,6 +235,7 @@ th, td {
 .maincontent {
   margin-bottom: auto;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 20px;
 }
 
 /* 
@@ -254,6 +330,7 @@ th, td {
   overflow: hidden;
   border: 2px solid var(--AZBlue);
   background-color: #f1f1f1;
+  font-size: 14px;
 }
 /* Style the buttons that are used to open the tab content */
 .tabnames button {
@@ -300,4 +377,42 @@ th, td {
 .sendDesc:hover + .hide{
   display: block;
   color: black
+}
+
+/* @media only screen and (min-width: 768px) {
+	body {
+		padding: 0 20px;
+	}
+	h1 {
+		font-size: 53.1px;
+		line-height: 0.98;
+		letter-spacing: 1.1px;
+		margin-bottom: 20px;
+	}
+	.h1-divider {
+		width: 339px;
+		height: 24px;
+		margin-bottom: 53px;
+	}
+	article p {
+		margin-bottom: 10px;
+	}
+
+}
+
+@media only screen and (min-width: 820px) {
+	body {
+		width: 820px;
+	}
+	h1 {
+		font-size: 66.4px;
+		line-height: 0.95;
+		letter-spacing: 1.4px;
+		margin-bottom: 30px;
+	}
+	.h1-divider {
+		width: 486px;
+		margin-bottom: 38px;
+	}
+	
 }
