--- a/public/includes/footer.html
+++ b/public/includes/footer.html
@@ -3,15 +3,13 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="text-center" id="footer-copyright">
-                    <!-- put your adress information here -->
                     Created by Students of The University of Arizona | Tucson, AZ USA 85721 <br>
                     Email:&nbsp;<a href="mailto:exploreAZ@gmail.com">exploreAZ@gmail.com
                         <br></a>
-                    <!-- end o addr -->
-                    <!-- your feedback link or mailto -->
+
                     <a href="mailto:exploreAZ@gmail.com">Feedback</a>
                 </div>
             </div>
         </div>
-    </div> <!-- /.container-->
+    </div> 
 </footer>
