--- a/public/includes/header.html
+++ b/public/includes/header.html
@@ -1,6 +1,6 @@
 <header class="headerman">
 
-    <video autoPlay loop muted id="video">
+    <video autoPlay loop muted id="video" alt="Explore AZ">
         <source src="images/az.mp4" type="video/mp4">
     </video>
     <img alt="exploreAz Logo"
@@ -8,12 +8,3 @@
         class="logo">
     
 </header>
-
-<!-- This is the space for IT to add a litte submenu to send them to support.engr -->
-<!--<div id="region-header-engr" class="support">
-    <button id="support-menu-button" onclick="support_menu_toggle('support-menu');">
-        <i class="material-icons">menu</i>
-    </button>
-    <section class="container l-container support">
-    </section>
-</div>
